Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-3519

HTTP/2 seeing a lot of GOAWAY frames being sent

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 5.3.0
    • 5.3.0, 6.0.0
    • HTTP/2
    • None

    Description

      Logging GOAWAY frames in Http2ConnectionState::main_event_handler()

      [Apr 13 22:40:29.258] Server {0x2b08e7b3a700} ERROR: Sending GOAWAY frame
      [Apr 13 22:40:29.449] Server {0x2b08e8948700} ERROR: Sending GOAWAY frame
      [Apr 13 22:40:29.591] Server {0x2b08e7e3d700} ERROR: Sending GOAWAY frame
      [Apr 13 22:40:30.197] Server {0x2b08e8645700} ERROR: Sending GOAWAY frame
      [Apr 13 22:40:30.362] Server {0x2b08e6b2a700} ERROR: Sending GOAWAY frame
      

      Attachments

        Activity

          People

            bcall Bryan Call
            bcall Bryan Call
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: