TS-3519: HTTP/2 seeing a lot of GOAWAY frames being sent